--- a/buro.html
+++ b/buro.html
@@ -85,20 +85,20 @@
             <div class="name">НАШИ ПАРТНЕРЫ</div>
             <div class="collage">
                 <div class="row">
-                    <div class="partner"><img src="./images/buro/partner_1.png" alt="ERROR_404"></div>
-                    <div class="partner"><img src="./images/buro/partner_2.png" alt="ERROR_404"></div>
-                    <div class="partner"><img src="./images/buro/partner_3.png" alt="ERROR_404"></div>
-                    <div class="partner"><img src="./images/buro/partner_4.png" alt="ERROR_404"></div>
-                    <div class="partner"><img src="./images/buro/partner_5.png" alt="ERROR_404"></div>
-                    <div class="partner"><img src="./images/buro/partner_6.png" alt="ERROR_404"></div>
+                    <img src="./images/buro/partner_1.png" alt="ERROR_404">
+                    <img src="./images/buro/partner_2.png" alt="ERROR_404">
+                    <img src="./images/buro/partner_3.png" alt="ERROR_404">
+                    <img src="./images/buro/partner_4.png" alt="ERROR_404">
+                    <img src="./images/buro/partner_5.png" alt="ERROR_404">
+                    <img src="./images/buro/partner_6.png" alt="ERROR_404">
                 </div>
                 <div class="row">
-                    <div class="partner"><img src="./images/buro/partner_7.png" alt="ERROR_404"></div>
-                    <div class="partner"><img src="./images/buro/partner_8.png" alt="ERROR_404"></div>
-                    <div class="partner"><img src="./images/buro/partner_9.png" alt="ERROR_404"></div>
-                    <div class="partner"><img src="./images/buro/partner_10.png" alt="ERROR_404"></div>
-                    <div class="partner"><img src="./images/buro/partner_11.png" alt="ERROR_404"></div>
-                    <div class="partner"><img src="./images/buro/partner_12.png" alt="ERROR_404"></div>
+                    <img src="./images/buro/partner_7.png" alt="ERROR_404">
+                    <img src="./images/buro/partner_8.png" alt="ERROR_404">
+                    <img src="./images/buro/partner_9.png" alt="ERROR_404">
+                    <img src="./images/buro/partner_10.png" alt="ERROR_404">
+                    <img src="./images/buro/partner_11.png" alt="ERROR_404">
+                    <img src="./images/buro/partner_12.png" alt="ERROR_404">
                 </div>
             </div>
         </div>
