Создание всех HTML-страниц

--- a/buro.html
+++ b/buro.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./styles/buro.css">
-    <title>ARCHICRAFT</title>
+    <title>Бюро - ARCHICRAFT</title>
 </head>
 
 <body>
@@ -109,7 +109,7 @@
         <div class="email">archicraft@archicraft.ru</div>
         <div class="address">777777, РОССИЯ, МОСКВА, УЛ. ПУШИНА Д. 7</div>
     </div>
-    </div>    
+</div>    
 </body>
 
 </html>
