--- a/docs.html
+++ b/docs.html
@@ -59,6 +59,14 @@
                 <img src="images/docs/Frame.png" alt="стрелОчка">
             </div>
         </div>
+        <div class="str">
+            <img src="images/docs/Group 4.png" alt="" srcset="">
+        </div>
+    </div>
+    <div class="bottom">
+        <div class="phones">+7 (495) XXX-XX-XX / +7 (499) XXX-XX-XX</div>
+        <div class="email">archicraft@archicraft.ru</div>
+        <div class="address">777777, РОССИЯ, МОСКВА, УЛ. ПУШИНА Д. 7</div>
     </div>
 </div>    
 </body>
