--- a/news.html
+++ b/news.html
@@ -14,140 +14,169 @@
 <body>
     <div class="wrapper">
         <div class="header">
-            <div class="extra">
-                <div class="ru_button">RU</div>
-                <div class="en_button">EN</div>
-                <div class="eye_button">
-                    <img src="./images/eye.svg" alt="">
+            <div class="header_panel">
+                <div class="extra">
+                    <div class="ru_button">RU</div>
+                    <div class="en_button">EN</div>
+                    <img src="./images/eye.png" alt="ERROR_404">
                 </div>
-            </div>
-            <div class="info">
-                <div class="logo">
-                    <img src="./images/ППМ_Строительная_компания 1.svg" alt="logo_error">
+                <div class="info">
+                    <span><img src="./images/ППМ_Строительная_компания 1.svg" alt="logo_error"></span>
+                    <p class="describe"><span>Проектное бюро</span></p>
+                    <p class="phone"><span>+7 (495) XXX-XX-XX</span></p>
                 </div>
-                <div class="describe">Проектное меню</div>
-                <div class="phone">+7 (495) XXX-XX-XX</div>
-            </div>
-            <div class="menu">
-                <div class="buro">БЮРО</div>
-                <div class="news">НОВОСТИ</div>
-                <div class="projects">ПРОЕКТЫ</div>
-                <div class="docs">НОРМАТИВНЫЕ<br>ДОКУМУНТЫ</div>
-                <div class="contacts">КОНТАКТЫ</div>
+                <div class="menu">
+                    <p class="buro"><span>БЮРО</span></p>
+                    <p class="news"><span>НОВОСТИ</span></p>
+                    <p class="projects"><span>ПРОЕКТЫ</span></p>
+                    <p class="docs"><span>НОРМАТИВНЫЕ ДОКУМУНТЫ</span></p>
+                    <p class="contacts"><span>КОНТАКТЫ</span></p>
+                </div>
             </div>
         </div>
 
-        <div class="main">
-            <div class="row">
-                <div class="block">
-                    <img src="./images/news/picture.png" alt="ERROR_404">
-                    <div class="block_text">
+        <div class="content">
+            <div class="news_panel">
+                <div class="news_element">
+                    <img src="./images/news/picture.png" alt="">
+                    <div class="news_text">
                         <p class="date">01 апреля 2022</p>
-                        <p class="head">ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ</p>
+                        <br>
+                        <p class="head">
+                            ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ
+                        </p>
+                        <br>
                         <p class="text">
                             У нас отличные новости: два проекта ARCHICRAFT номинированы на Архитектурную премию Москвы
                             в номинации «Лучшее архитектурно-градостроительное решение объекта временного и постоянного проживания»!
                         </p>
-                        <a href="" class="ref">Читать далее</a>
+                        <div class="ref"><a href=""> Читать далее</a></div>
                     </div>
                 </div>
-                <div class="block">
-                    <img src="./images/news/picture.png" alt="ERROR_404">
-                    <div class="block_text">
+                <div class="news_element">
+                    <img src="./images/news/picture.png" alt="">
+                    <div class="news_text">
                         <p class="date">01 апреля 2022</p>
-                        <p class="head">ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ</p>
+                        <br>
+                        <p class="head">
+                            ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ
+                        </p>
+                        <br>
                         <p class="text">
                             У нас отличные новости: два проекта ARCHICRAFT номинированы на Архитектурную премию Москвы
                             в номинации «Лучшее архитектурно-градостроительное решение объекта временного и постоянного проживания»!
                         </p>
-                        <a href="" class="ref">Читать далее</a>
+                        <div class="ref"><a href=""> Читать далее</a></div>
+                    </div>
+                </div>
+                <div class="news_element">
+                    <img src="./images/news/picture.png" alt="">
+                    <div class="news_text">
+                        <p class="date">01 апреля 2022</p>
+                        <br>
+                        <p class="head">
+                            ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ
+                        </p>
+                        <br>
+                        <p class="text">
+                            У нас отличные новости: два проекта ARCHICRAFT номинированы на Архитектурную премию Москвы
+                            в номинации «Лучшее архитектурно-градостроительное решение объекта временного и постоянного проживания»!
+                        </p>
+                        <div class="ref"><a href=""> Читать далее</a></div>
+                    </div>
+                </div>
+                <div class="news_element">
+                    <img src="./images/news/picture.png" alt="">
+                    <div class="news_text">
+                        <p class="date">01 апреля 2022</p>
+                        <br>
+                        <p class="head">
+                            ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ
+                        </p>
+                        <br>
+                        <p class="text">
+                            У нас отличные новости: два проекта ARCHICRAFT номинированы на Архитектурную премию Москвы
+                            в номинации «Лучшее архитектурно-градостроительное решение объекта временного и постоянного проживания»!
+                        </p>
+                        <div class="ref"><a href=""> Читать далее</a></div>
+                    </div>
+                </div>
+                <div class="news_element">
+                    <img src="./images/news/picture.png" alt="">
+                    <div class="news_text">
+                        <p class="date">01 апреля 2022</p>
+                        <br>
+                        <p class="head">
+                            ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ
+                        </p>
+                        <br>
+                        <p class="text">
+                            У нас отличные новости: два проекта ARCHICRAFT номинированы на Архитектурную премию Москвы
+                            в номинации «Лучшее архитектурно-градостроительное решение объекта временного и постоянного проживания»!
+                        </p>
+                        <div class="ref"><a href=""> Читать далее</a></div>
+                    </div>
+                </div>
+                <div class="news_element">
+                    <img src="./images/news/picture.png" alt="">
+                    <div class="news_text">
+                        <p class="date">01 апреля 2022</p>
+                        <br>
+                        <p class="head">
+                            ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ
+                        </p>
+                        <br>
+                        <p class="text">
+                            У нас отличные новости: два проекта ARCHICRAFT номинированы на Архитектурную премию Москвы
+                            в номинации «Лучшее архитектурно-градостроительное решение объекта временного и постоянного проживания»!
+                        </p>
+                        <div class="ref"><a href=""> Читать далее</a></div>
+                    </div>
+                </div>
+                <div class="news_element">
+                    <img src="./images/news/picture.png" alt="">
+                    <div class="news_text">
+                        <p class="date">01 апреля 2022</p>
+                        <br>
+                        <p class="head">
+                            ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ
+                        </p>
+                        <br>
+                        <p class="text">
+                            У нас отличные новости: два проекта ARCHICRAFT номинированы на Архитектурную премию Москвы
+                            в номинации «Лучшее архитектурно-градостроительное решение объекта временного и постоянного проживания»!
+                        </p>
+                        <div class="ref"><a href=""> Читать далее</a></div>
+                    </div>
+                </div>
+                <div class="news_element">
+                    <img src="./images/news/picture.png" alt="">
+                    <div class="news_text">
+                        <p class="date">01 апреля 2022</p>
+                        <br>
+                        <p class="head">
+                            ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ
+                        </p>
+                        <br>
+                        <p class="text">
+                            У нас отличные новости: два проекта ARCHICRAFT номинированы на Архитектурную премию Москвы
+                            в номинации «Лучшее архитектурно-градостроительное решение объекта временного и постоянного проживания»!
+                        </p>
+                        <div class="ref"><a href=""> Читать далее</a></div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="block">
-                    <img src="./images/news/picture.png" alt="ERROR_404">
-                    <div class="block_text">
-                        <p class="date">01 апреля 2022</p>
-                        <p class="head">ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ</p>
-                        <p class="text">
-                            У нас отличные новости: два проекта ARCHICRAFT номинированы на Архитектурную премию Москвы
-                            в номинации «Лучшее архитектурно-градостроительное решение объекта временного и постоянного проживания»!
-                        </p>
-                        <a href="" class="ref">Читать далее</a>
-                    </div>
-                </div>
-                <div class="block">
-                    <img src="./images/news/picture.png" alt="ERROR_404">
-                    <div class="block_text">
-                        <p class="date">01 апреля 2022</p>
-                        <p class="head">ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ</p>
-                        <p class="text">
-                            У нас отличные новости: два проекта ARCHICRAFT номинированы на Архитектурную премию Москвы
-                            в номинации «Лучшее архитектурно-градостроительное решение объекта временного и постоянного проживания»!
-                        </p>
-                        <a href="" class="ref">Читать далее</a>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="block">
-                    <img src="./images/news/picture.png" alt="ERROR_404">
-                    <div class="block_text">
-                        <p class="date">01 апреля 2022</p>
-                        <p class="head">ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ</p>
-                        <p class="text">
-                            У нас отличные новости: два проекта ARCHICRAFT номинированы на Архитектурную премию Москвы
-                            в номинации «Лучшее архитектурно-градостроительное решение объекта временного и постоянного проживания»!
-                        </p>
-                        <a href="" class="ref">Читать далее</a>
-                    </div>
-                </div>
-                <div class="block">
-                    <img src="./images/news/picture.png" alt="ERROR_404">
-                    <div class="block_text">
-                        <p class="date">01 апреля 2022</p>
-                        <p class="head">ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ</p>
-                        <p class="text">
-                            У нас отличные новости: два проекта ARCHICRAFT номинированы на Архитектурную премию Москвы
-                            в номинации «Лучшее архитектурно-градостроительное решение объекта временного и постоянного проживания»!
-                        </p>
-                        <a href="" class="ref">Читать далее</a>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="block">
-                    <img src="./images/news/picture.png" alt="ERROR_404">
-                    <div class="block_text">
-                        <p class="date">01 апреля 2022</p>
-                        <p class="head">ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ</p>
-                        <p class="text">
-                            У нас отличные новости: два проекта ARCHICRAFT номинированы на Архитектурную премию Москвы
-                            в номинации «Лучшее архитектурно-градостроительное решение объекта временного и постоянного проживания»!
-                        </p>
-                        <a href="" class="ref">Читать далее</a>
-                    </div>
-                </div>
-                <div class="block">
-                    <img src="./images/news/picture.png" alt="ERROR_404">
-                    <div class="block_text">
-                        <p class="date">01 апреля 2022</p>
-                        <p class="head">ДВА ПРОЕКТА АРХИТЕКТУРНОЙ МАСТЕРСКОЙ ARCHICRAFT НОМИНИРОВАНЫ НА АРХИТЕКТУРНУЮ ПРЕМИЮ МОСКВЫ</p>
-                        <p class="text">
-                            У нас отличные новости: два проекта ARCHICRAFT номинированы на Архитектурную премию Москвы
-                            в номинации «Лучшее архитектурно-градостроительное решение объекта временного и постоянного проживания»!
-                        </p>
-                        <a href="" class="ref">Читать далее</a>
-                    </div>
-                </div>
+            <div class="pages">
+                <img src="./images/Group 4.svg" alt="">
             </div>
         </div>
 
         <div class="bottom">
-            <div class="phones">+7 (495) XXX-XX-XX / +7 (499) XXX-XX-XX</div>
-            <div class="email">archicraft@archicraft.ru</div>
-            <div class="address">777777, РОССИЯ, МОСКВА, УЛ. ПУШИНА Д. 7</div>
+            <div class="bottom_info">
+                <p class="phones">+7 (495) XXX-XX-XX / +7 (499) XXX-XX-XX</p>
+                <p class="email">archicraft@archicraft.ru</p>
+                <p class="address">777777, РОССИЯ, МОСКВА, УЛ. ПУШИНА Д. 7</p>
+            </div>
         </div>
     </div>
 </body>
