--- a/news.html
+++ b/news.html
@@ -16,9 +16,15 @@
         <div class="header">
             <div class="header_panel">
                 <div class="extra">
-                    <div class="ru_button">RU</div>
-                    <div class="en_button">EN</div>
-                    <img src="./images/eye.png" alt="ERROR_404">
+                    <form action="">
+                        <button class="ru_button">RU</button>
+                    </form>
+                    <form action="">
+                        <button class="en_button">EN</button>
+                    </form>
+                    <form action="">
+                        <button><img src="./images/eye.png" alt="ERROR_404"></button>
+                    </form>
                 </div>
                 <div class="info">
                     <span><img src="./images/ППМ_Строительная_компания 1.svg" alt="logo_error"></span>
@@ -26,11 +32,21 @@
                     <p class="phone"><span>+7 (495) XXX-XX-XX</span></p>
                 </div>
                 <div class="menu">
-                    <p class="buro"><span>БЮРО</span></p>
-                    <p class="news"><span>НОВОСТИ</span></p>
-                    <p class="projects"><span>ПРОЕКТЫ</span></p>
-                    <p class="docs"><span>НОРМАТИВНЫЕ ДОКУМУНТЫ</span></p>
-                    <p class="contacts"><span>КОНТАКТЫ</span></p>
+                    <form action="/buro.html">
+                        <button class="buro">БЮРО</button>
+                    </form>
+                    <form action="/news.html">
+                        <button class="news"><span>НОВОСТИ</span></button>
+                    </form>
+                    <form action="/project.html">
+                        <button class="project"><span>ПРОЕКТЫ</span></button>
+                    </form>
+                    <form action="/docs.html">
+                        <button class="docs"><span>НОРМАТИВНЫЕ ДОКУМУНТЫ</span></button>
+                    </form>
+                    <form action="/contacts.html">
+                        <button class="contacts"><span>КОНТАКТЫ</span></button>
+                    </form>
                 </div>
             </div>
         </div>
