Завершение страниц НОВОСТИ и КОНТАКТЫ

--- a/contacts.html
+++ b/contacts.html
@@ -53,56 +53,51 @@
 
         <div class="main">
             <div class="relations">
-                <div class="name">СВЯЗАТЬСЯ С НАМИ</div>
+                <h1 class="name">СВЯЗАТЬСЯ С НАМИ</h1>
                 <div class="relations_blocks">
-                    <div class="row_1">
-                        <div class="block_1">
-                            <p>Горячая линия</p>
-                            <p>+7 (495) XXX-XX-XX</p>
-                            <p>+7 (499) XXX-XX-XX</p>
-                            <p>info@archicraft.ru</p>
-                        </div>
-                        <div class="block_1">
-                            <p>Бизнес отдел</p>
-                            <p>+7 (495) XXX-XX-XX</p>
-                            <p>buisness@archicraft.ru</p>
-                        </div>
+                    <div class="block_1">
+                        <h2>Горячая линия</h2>
+                        <p>+7 (495) XXX-XX-XX</p>
+                        <p>+7 (499) XXX-XX-XX</p>
+                        <p>info@archicraft.ru</p>
                     </div>
-
-                    <div class="row_1">
-                        <div class="block_1">
-                            <p>Пресс служба</p>
-                            <p>+7 (495) XXX-XX-XX</p>
-                            <p>press@archicraft.ru</p>
-                        </div>
-                        <div class="block_1">
-                            <p>Отдел кадров</p>
-                            <p>+7 (495) XXX-XX-XX</p>
-                            <p>hr.dep@archicraft.ru</p>
-                        </div>
+                    <div class="block_1">
+                        <h2>Бизнес отдел</h2>
+                        <p>+7 (495) XXX-XX-XX</p>
+                        <p>buisness@archicraft.ru</p>
+                    </div>
+                    <div class="block_1">
+                        <h2>Пресс служба</h2>
+                        <p>+7 (495) XXX-XX-XX</p>
+                        <p>press@archicraft.ru</p>
+                    </div>
+                    <div class="block_1">
+                        <h2>Отдел кадров</h2>
+                        <p>+7 (495) XXX-XX-XX</p>
+                        <p>hr.dep@archicraft.ru</p>
                     </div>
                 </div>
-                <div class="button">
-                    <p>Заказать звонок</p>
-                </div>
+                <form action="">
+                    <div class="call_button"><button>Заказать звонок</button></div>
+                </form>
             </div>
             <div class="path">
-                <div class="name">КАК ДОБРАТЬСЯ</div>
+                <h1 class="name">КАК ДОБРАТЬСЯ</h1>
                 <div class="path_blocks">
                     <div class="block_2">
-                        <p>Офис</p>
+                        <h2>Офис</h2>
                         <p>Офис 777777, Россия, Москва, ул. Пушина д. 7, Бизнес-центр “Переделкино”, этаж 3, каб. 301.</p>
                     </div>
                     <div class="block_2">
-                        <p>Как пройти</p>
+                        <h2>Как пройти</h2>
                         <p>Как пройти м. Технопарк, первый вагон из центра, выход №3. От метро 5 минут до коричневого здания БЦ “Переделкино”.</p>
                     </div>
                 </div>
-                <div class="pic"><img src="./images/contacts/map.png" alt="ERROR_404"></div>
+                <div class="pic1"><img src="./images/contacts/map.png" alt="ERROR_404"></div>
             </div>
             <div class="social_medias">
                 <div class="head">МЫ В СОЦИАЛЬНЫХ СЕТЯХ</div>
-                <div class="pic"><img src="./images/contacts/logos.png" alt="ERROR_404"></div>
+                <div class="pic2"><img src="./images/contacts/logos.png" alt="ERROR_404"></div>
             </div>
         </div>
 
