--- a/project.html
+++ b/project.html
@@ -50,8 +50,9 @@
                 </form>
             </div>
         </div>
-    </div>
+        </div>
 
+    <div class="paper">
     <div id="content">
         <div class="title_of_content"><h>НА СЕГОДНЯШНИЙ ДЕНЬ МЫ СПРОЕКТИРОВАЛИ И ПОСТРОИЛИ БОЛЕЕ 1 000 000 КВ МЕТРОВ</h></div>
 
@@ -95,13 +96,14 @@
         </div>
     </div>
 
-    <div class="oval">
-        <div class="all_objects"> <a href="">Все объекты</a></div>
+    <form action="">
+        <div class="all_objects"><button>Все объекты</button></div>
+    </form>
 
 
-    </div>
     <div class="title_of_content"><h>КАРТА ОБЪЕКТОВ</h></div>
     <div class="map"></div>
+    </div>
 
     
     <div class="bottom">
